# crfsuite

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  README  README-darwin.md  configure.ac  configure.in  crfsuite.sln  crfsuiteConfig.cmake.in  crfsuiteConfigVersion.cmake.in  genbinary.sh.in
bench/: accuracy.py  bench.py  bench_crfpp.py  bench_crfsgd.py  bench_crfsuite-0.11.py  bench_crfsuite.py  bench_mallet.py  bench_wapiti.py  collect.py  crfsuite_to_mallet.py  plot_performance.py
doc/: Doxyfile  footer.html  header.html
example/: chunking.py  crfutils.py  ner.py  template.py
example/CoNLL2000/: crfsuite_to_flexcrf.py  to_crfsuite.py
frontend/: Makefile.am  crf.1  crfsuite.1  dump.c  frontend.vcproj  frontend.vcxproj  iwa.c  iwa.h  learn.c  main.c  option.c  option.h  readdata.h  reader.c  reader.h  reader_sequence.c  tag.c
include/: Makefile.am  crfsuite.h  crfsuite.hpp  crfsuite_api.hpp  os.h
lib/cqdb/: Makefile.am  cqdb.vcproj  cqdb.vcxproj  makedist.sh
lib/cqdb/doc/: doxyfile  footer.html
lib/cqdb/include/: cqdb.h
lib/cqdb/src/: cqdb.c  cqdb_unittests.cc  lookup3.c  main.c
lib/crf/: Makefile.am  crf.vcproj  crf.vcxproj
lib/crf/include/: crf.h  crfsuite.h  crfsuite.hpp  crfsuite_api.hpp
lib/crf/src/: crf.c  crf1d.c  crf1d.h  crf1d_context.c  crf1d_encode.c  crf1d_feature.c  crf1d_learn.c  crf1d_model.c  crf1d_tag.c  crf1d_train.c  crf1m.c  crf1m.h  crf1m_context.c  crf1m_feature.c  crf1m_learn.c  crf1m_learn_lbfgs.c  crf1m_learn_sgd.c  crf1m_model.c  crf1m_tag.c  crf1m_train.c  crfsuite.c  crfsuite_internal.h  crfsuite_train.c  dataset.c  dictionary.c  holdout.c  logging.c  logging.h  mt19937ar.c  mt19937ar.h  params.c  params.h  quark.c  quark.h  rumavl.c  rumavl.h  train.c  train_arow.c  train_averaged_perceptron.c  train_l2sgd.c  (+5 more)
lib/lbfgs/: COPYING  Makefile.am  README  lbfgs.sln  lbfgs.vcproj  makedist.sh
lib/lbfgs/doc/: doxyfile  footer.html
lib/lbfgs/include/: lbfgs.h
lib/lbfgs/lib/: arithmetic_ansi.h  arithmetic_sse_double.h  arithmetic_sse_float.h  lbfgs.c
lib/lbfgs/logress/: logress.cpp  logress.vcproj  optparse.h  quark.h  tokenize.h
lib/lbfgs/src/: arithmetic_ansi.h  arithmetic_sse_double.h  arithmetic_sse_float.h  lbfgs.c  main.c
lib/lbfgs/test/: build.sh  lbfgs.sln  lbfgs.vcproj
swig/: Makefile.am  export.i
swig/dotnetcore/: Program.cs  README.md  dotnetcore.sln
swig/perl/: Makefile.PL.in  prepare.sh  sample_tag.pl  sample_train.pl
swig/python/: README  crfsuite.py  export_wrap.cpp  export_wrap.h  prepare.sh  sample_tag.py  sample_train.py  setup.py  setup.py.in  test_tag.py
swig/ruby/: README  extconf.rb  prepare.sh  sample_tag.rb  sample_train.rb
win32/liblbfgs/: lbfgs.h  lbfgs.lib  lbfgs_debug.lib
