# $Id: Makefile.am 334 2007-02-11 15:55:30Z nyaochi $

SUBDIRS = lib/cqdb lib/lbfgs lib/crf frontend

docdir = $(prefix)/share/doc/@PACKAGE@
doc_DATA = README INSTALL COPYING COPYING.LIB AUTHORS ChangeLog

EXTRA_DIST = \
  autogen.sh \
  include/os.h

AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4
